# SelfDB

./: CMakeLists.txt  README.md  compile_commands.json  conanfile.py
.cache/clangd/index/: database.cpp.F36244744588FAFD.idx  driver.cpp.1C142C8261A819D4.idx  persistence.cpp.D51547E7A1CF1531.idx
src/database/: CMakeLists.txt
src/database/include/database/: database.hpp
src/database/src/: database.cpp
src/driver/: CMakeLists.txt
src/driver/include/driver/: driver.hpp
src/driver/src/: driver.cpp
src/main/: CMakeLists.txt  main.cpp
src/persistence/: CMakeLists.txt
src/persistence/include/persistence/: persistence.hpp
src/persistence/src/: persistence.cpp
